graphql-parser/tests/snapshots/test__parse_query__minimal_schema.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `schema[Name]`\nExpected `{`, `query`, `mutation`, `subscription` or `fragment`\n",
    ),
)
