graphql-parser/tests/snapshots/test__parse_query__nested_selection.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            Operation(
                Query(
                    Query {
                        position: Pos(1:1),
                        name: None,
                        variable_definitions: [],
                        directives: [],
                        selection_set: SelectionSet {
                            span: (
                                Pos(1:7),
                                Pos(5:1),
                            ),
                            items: [
                                Field(
                                    Field {
                                        position: Pos(2:3),
                                        alias: None,
                                        name: "node",
                                        arguments: [],
                                        directives: [],
                                        selection_set: SelectionSet {
                                            span: (
                                                Pos(2:8),
                                                Pos(4:3),
                                            ),
                                            items: [
                                                Field(
                                                    Field {
                                                        position: Pos(3:5),
                                                        alias: None,
                                                        name: "id",
                                                        arguments: [],
                                                        directives: [],
                                                        selection_set: SelectionSet {
                                                            span: (
                                                                Pos(3:5),
                                                                Pos(3:5),
                                                            ),
                                                            items: [],
                                                        },
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ),
        ],
    },
)
